--- a/css/ingrid.css
+++ b/css/ingrid.css
@@ -17,10 +17,10 @@ Updated:  2012/2/16
 --------------------------------------------------------*/
 
 .ingrid {
-  margin: 0 -13px;
+  margin: 0 -1em; /* Can be set in em, % or px */
   padding: 0;
   clear: both;
-  list-style: none;
+  list-style: none; /* Works with ul & ol */
   letter-spacing: -0.31em;
   word-spacing: -0.43em;
 }
@@ -29,7 +29,7 @@ Updated:  2012/2/16
 .field-unit {
   margin: 0;
   display: inline-block;
-  position: relative;
+  position: relative; /* For left or right offsets  */
   letter-spacing: normal;
   word-spacing: normal;
   vertical-align: top;
@@ -48,7 +48,7 @@ Updated:  2012/2/16
 
 .unit,
 .field-unit {
-  padding: 0 13px;
+  padding: 0 1em; /* Can be set in em, % or px (must match .ingrid negative margins) */
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -57,7 +57,7 @@ Updated:  2012/2/16
 
 
 /* oldIE 
-   Some IE7 help
+   Some IE7 help (a starter-kit for oldIE support)
 --------------------------------------------------------*/
 
 .ingrid {
@@ -83,12 +83,12 @@ Updated:  2012/2/16
    These divider classes are set on .ingrid container
 --------------------------------------------------------*/
 
-.in-twos      .unit   { width: 50%; } 
-.in-thirds    .unit   { width: 33.33333%; } 
-.in-fourths   .unit   { width: 25%; } 
-.in-fifths    .unit   { width: 20%; } 
-.in-sixths    .unit   { width: 16.6666666%; }
-.in-sevenths  .unit   { width: 14.2857143%; }
+.in-halves    >   .unit   { width: 50%; } 
+.in-thirds    >   .unit   { width: 33.33333%; } 
+.in-fourths   >   .unit   { width: 25%; } 
+.in-fifths    >   .unit   { width: 20%; } 
+.in-sixths    >   .unit   { width: 16.6666666%; }
+.in-sevenths  >   .unit   { width: 14.2857143%; }
 
 
 
@@ -98,27 +98,27 @@ Updated:  2012/2/16
 --------------------------------------------------------*/
 
 /* Spatial units in thirds */
-.in-thirds    .span-2  { width: 66.66666%; }
+.in-thirds    >   .span-two   { width: 66.66666%; }
 
 /* Spatial units in fourths */
-.in-fourths   .span-2  { width: 50%; }
-.in-fourths   .span-3  { width: 75%; }
+.in-fourths   >   .span-two   { width: 50%; }
+.in-fourths   >   .span-three { width: 75%; }
 
 /* Spatial units in fifths */
-.in-fifths    .span-2  { width: 40%; }
-.in-fifths    .span-3  { width: 60%; }
-.in-fifths    .span-4  { width: 80%; }
+.in-fifths    >   .span-two   { width: 40%; }
+.in-fifths    >   .span-three { width: 60%; }
+.in-fifths    >   .span-four  { width: 80%; }
 
 /* Spatial units in sixths */
-.in-sixths    .span-2  { width: 33.33333%; }
-.in-sixths    .span-3  { width: 50%; }
-.in-sixths    .span-4  { width: 66.66666%; }
-.in-sixths    .span-5  { width: 83.3333333%; }
+.in-sixths    >   .span-two   { width: 33.33333%; }
+.in-sixths    >   .span-three { width: 50%; }
+.in-sixths    >   .span-four  { width: 66.66666%; }
+.in-sixths    >   .span-five  { width: 83.3333333%; }
 
 /* Spatial units in sevenths */
-.in-sevenths  .span-2  { width: 28.5714286%; }
-.in-sevenths  .span-3  { width: 42.8571429%; }
-.in-sevenths  .span-4  { width: 57.1428572%; }
-.in-sevenths  .span-5  { width: 71.4285715%; }
-.in-sevenths  .span-6  { width: 85.7142858%; }
+.in-sevenths  >   .span-two   { width: 28.5714286%; }
+.in-sevenths  >   .span-three { width: 42.8571429%; }
+.in-sevenths  >   .span-four  { width: 57.1428572%; }
+.in-sevenths  >   .span-five  { width: 71.4285715%; }
+.in-sevenths  >   .span-six   { width: 85.7142858%; }
 
