--- a/ingrid-scss/styles/scss/demo.scss
+++ b/ingrid-scss/styles/scss/demo.scss
@@ -1,51 +1,53 @@
 @import 'ingrid';
 
+
 // DEMO pt.1
 //----------------------------------------------------
 
 .demo-items {
-  @extend .ingrid;
-  @include has-custom-gutters('.demo-items--unit', $flex-gutter);
+  @include ingrid;
+  @include has-gutters('.demo-items--unit');
 }
 
 .demo-items--unit {
-  @extend .ingrid--unit;
-  @include grid-unit-widths($in-fifths);
+  @include ingrid--unit;
+  @include has-columns($in-fifths);
 }
 
 .demo-items--unit:first-of-type {
-  @include grid-unit-widths($in-fifths, $span-two);
+  @include has-columns($in-fifths, $span-two);
 }
 
 // DEMO pt.2
 //----------------------------------------------------
 
 .demo-blocks {
-  @extend .ingrid;
+  @include ingrid;
+  @include has-gutters('.demo-blocks--unit');
 }
 
 .demo-blocks--unit {
-  @extend .ingrid--unit;
-  @include grid-unit-widths($in-sixths);
+  @include ingrid--unit;
+  @include has-columns($in-sixths);
 }
 
 // DEMO pt.3
 //----------------------------------------------------
 
 .demo-modules {
-  @extend .ingrid;
-  @include has-custom-gutters('.demo-modules--unit', 1%);
+  @include ingrid;
+  @include has-gutters('.demo-modules--unit');
 }
 
 .demo-modules--unit {
-  @extend .ingrid--unit;
-  @include grid-unit-widths($in-thirds);
+  @include ingrid--unit;
+  @include has-columns($in-thirds);
 }
 
 .demo-modules--custom-unit {
-  @extend .ingrid--unit;
+  @include ingrid--unit;
   margin-right: 8%;
-  padding: 0 1%;
+  padding: 0 $flex-gutter;
   width: 25.33333%;
 }
 
@@ -53,26 +55,88 @@
 //----------------------------------------------------
 
 .demo-minis {
-  @extend .ingrid;
-  @include has-custom-gutters('.demo-minis--unit', 3px);
+  @include ingrid;
+  @include has-gutters('.demo-minis--unit');
 }
 
 .demo-minis--unit {
-  @extend .ingrid--unit;
-  @include grid-unit-widths($in-eights);
+  @include ingrid--unit;
+  @include has-columns($in-eights);
 }
+
+// DEMO pt.5
+//----------------------------------------------------
+
+.demo-parent {
+  @include ingrid;
+  @include has-gutters('.demo-parent--unit');
+}
+
+.demo-parent--unit {
+  @include ingrid--unit;
+  @include has-columns($in-thirds);
+}
+
+.demo-parent--custom-unit {
+  @extend .demo-parent--unit;
+  @include has-columns($in-thirds, $span-two);
+}
+
+.demo-nested {
+  @include ingrid;
+  @include has-gutters('.demo-nested--unit', $flex-gutter, $in-thirds, $span-two);
+}
+
+.demo-nested--unit {
+  @include ingrid--unit;
+  @include has-columns($in-fourths);
+}
+
+// DEMO pt.6
+//----------------------------------------------------
+
+@media only screen and (min-width: 481px) {
+
+  .demo-responsive {
+    @include ingrid;
+    @include has-gutters('.demo-responsive--unit');
+  }
+
+  .demo-responsive--unit {
+    @include ingrid--unit;
+    @include has-columns($in-halves);
+  }
+
+}
+
+@media only screen and (min-width: 769px) {
+
+  .demo-responsive--unit {
+    @include has-columns($in-fourths);
+  }
+
+}
+
+
+
+
+
+
+
+
 
 // Demo styles
 //----------------------------------------------------
 
 .demo-page {
   margin: 2em auto;
-  width: 96%;
+  width: 93%;
 }
 
 .demo-box {
   margin: 10px 0;
   background: #ddd;
+  background: rgba(0,0,0,.3);
   height: 100px;
   border-radius: 4px;
 }
