--- a/ingrid-scss/styles/scss/ingrid.scss
+++ b/ingrid-scss/styles/scss/ingrid.scss
@@ -10,8 +10,8 @@ Twitter:  @robertpiira
 //--------------------------------------------------------
 
 // Default gutter variables
-$zoom-gutter:     1em   !default;
 $flex-gutter:     2%    !default;
+$zoom-gutter:     1em   !default;
 $static-gutter:   15px  !default;
 
 // Context variables
@@ -24,6 +24,7 @@ $in-sevenths: 7;
 $in-eights:   8;
 
 // Spatial unit variables
+$span-one:    1;
 $span-two:    2;
 $span-three:  3;
 $span-four:   4;
@@ -31,7 +32,46 @@ $span-five:   5;
 $span-six:    6;
 $span-seven:  7;
 
-// GUTTERS
+// INGRID EXTEND
+//--------------------------------------------------------
+
+.ingrid {
+  padding: 0;
+  clear: both;
+  list-style: none;
+}
+
+.ingrid--unit {
+  margin: 0;
+  letter-spacing: normal;
+  vertical-align: top;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+// INGRID MIXIN
+//--------------------------------------------------------
+
+// The grid unit container
+@mixin ingrid {
+  letter-spacing: -0.31em;
+  @extend .ingrid;
+}
+
+// The grid unit
+@mixin ingrid--unit {
+  display: inline-block;
+  @extend .ingrid--unit;
+}
+
+// Field units strech the whole width of a container
+@mixin ingrid--field-unit {
+  display: block;
+  @extend .ingrid--unit;
+}
+
+// UNIT GUTTERS
 //--------------------------------------------------------
 
 @mixin has-gutters($unit-selector, $gutter: $flex-gutter, $context: false, $target: false) {
@@ -54,50 +94,11 @@ $span-seven:  7;
   }
 }
 
-// INGRID BASE
-//--------------------------------------------------------
-
-.ingrid-extend {
-  padding: 0;
-  clear: both;
-  list-style: none;
-}
-
-.ingrid--unit-extend {
-  margin: 0;
-  letter-spacing: normal;
-  vertical-align: top;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-// INGRID MIXIN
-//--------------------------------------------------------
-
-// The grid unit container
-@mixin ingrid {
-  letter-spacing: -0.31em;
-  @extend .ingrid-extend;
-}
-
-// The grid unit
-@mixin ingrid--unit {
-  display: inline-block;
-  @extend .ingrid--unit-extend;
-}
-
-// Field units strech the whole width of a container
-@mixin ingrid--field-unit {
-  display: block;
-  @extend .ingrid--unit-extend;
-}
-
-// GRID UNIT WIDTHS
+// UNIT WIDTHS
 //--------------------------------------------------------
 
 @mixin has-columns($context, $unit-span: 1) {
-  width:  percentage($unit-span / $context);
+  width: percentage($unit-span / $context);
 }
 
 //end-----------------------------------------------------
