Add demo link to css file

--- a/css/ingrid-responsive.css
+++ b/css/ingrid-responsive.css
@@ -6,6 +6,7 @@
  * Author:   Robert Piirainen
  * Twitter:  @robertpiira
  * Github:   https://github.com/robertpiira/ingrid
+ * Demo:     http://codepen.io/robertpiira/pen/kofpu
  * 
  *---------------------------------------*/
 
